# dramaturgy

./: .gitignore  README.ja.md  README.md  pyproject.toml  rfp.md
.claude/commands/dramaturgy/: analyze.md  cards.md  finalize.md  tree.md
docs/: dramaturgy.html  ec-cube.html  index.html
dramaturgy/: __init__.py  __main__.py  cli.py
dramaturgy/catalogs/cli/: en.json  ja.json
dramaturgy/catalogs/html/: en.json  ja.json
dramaturgy/commands/: __init__.py  analyze_repo.py  analyze_schema.py  build_area_pack.py  build_area_tree_prompt.py  export_parts.py  merge_maps.py  propose_area_candidates.py  render_html.py  serve.py  setup_cmd.py  suggest_subdivision.py  validate_map.py
dramaturgy/common/: __init__.py  area_match.py  config.py  i18n.py  paths.py  prompts.py
dramaturgy/prompts/: area_card.en.md  area_card.ja.md  area_tree.en.md  area_tree.ja.md  review_audit.en.md  review_audit.ja.md  review_proposal.en.md  review_proposal.ja.md  review_reframe.en.md  review_reframe.ja.md  subdivide_review.en.md  subdivide_review.ja.md  system_purpose.en.md  system_purpose.ja.md  writeback_area_card.en.md  writeback_area_card.ja.md  writeback_area_tree.en.md  writeback_area_tree.ja.md
dramaturgy/server/: __init__.py  api.py  claude_runner.py  http.py  jobs.py  prompt_jobs.py  reviews.py  tags.py
dramaturgy/server/static/app/: app.css  app.js  index.html
tests/: test_pipeline.py  test_server.py
tests/fixtures/sample_app/app/controllers/: tickets_controller.rb
tests/fixtures/sample_app/app/models/: ticket.rb
tests/fixtures/sample_app/db/: schema.sql
tools/meaning_map/: analyze_repo.py  analyze_schema.py  build_area_pack.py  build_area_tree_prompt.py  merge_maps.py  propose_area_candidates.py  render_html.py  setup.py  suggest_subdivision.py  validate_map.py
tools/meaning_map/catalogs/cli/: ja.json
tools/meaning_map/catalogs/html/: ja.json
tools/meaning_map/common/: __init__.py  bootstrap.py  config.py  paths.py
tools/meaning_map/prompts/: area_card.en.md  area_tree.en.md  area_tree.ja.md  split_review.en.md  split_review.ja.md
